Tue Dec  4 12:06:13 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcolorsel.c: Ref and sink priv->tooltips in
	init() and unref priv->tooltips in destroy rather
	than calling gtk_object_destroy() which has no
	effect on memory management. (#66104, HideToshi
	Tajima)

	* gtk/gtkcolorsel.c (palette_set_color): Use g_object_set_data_full()
	so we free the when the object is freed. (Fixes memory
	leak, #66096, HideToshi Tajima)

	* gdk/gdkevents.c (gdk_synthesize_window_state): Use 
	a full GdkEvent structure to avoid reads of uninitialized/
	invalid memory in gdk_event_put() (#65877, patch
	from Hidetoshi Tajima)

Tue Dec  4 11:06:54 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenuitem.c: Revert my last mistaken change - 
	toggle-size-request doesn't take a requisition.

	* gtk/gtkmenuitem.c (gtk_menu_item_class_init): Fix
	reference to marshaler that no longer exists.

Mon Dec  3 16:39:17 2001  Owen Taylor  <otaylor@redhat.com>

	Patch from Bill Haneman (with many modifications) to make
	the focus color work on dark themes and to make the
	focus line width configurable. (#61079, #63074)

        * gtk/gtkwidget.c: Add style properties, 
	::focus-widget, ::focus-line-width, and ::focus-padding.

	* gtk/gtkstyle.[ch]: Make gtk_paint_focus() take a 
	state argument as well so we can use fg[STATE] to
	draw instead of always drawing with black. 
	Cange paint_focus() to respect GtkWidget::focus-width
	and GtkWidget::focus-line-pattern. Fix continuity
	problem where the default 1-1 stipple had a blob
	in one corner and a gap in the other. Change the
	interpretation of x/y/width/height to be the bounding
	box of the focus rect instead of the rectangle
	passed to gdk_draw_rectangle.

	* gtk/gtkcheckbutton.c gtk/gtklistitem.c gtk/gtknotebook.c 
	gtk/gtkoptionmenu.c gtk/gtkradiobutton.c gtk/gtkspinbutton.c 
	gtk/gtktextview.c gtk/gtktreeview.c: Handle ::focus-width 
	and ::focus-line-padding.

	* gtk/gtkentry.c: Handle :;focus-width property; cleanup